# TalkPaste

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py  cli.py  config.py  logging_setup.py  main.py  models.py
app/platform/: __init__.py  base.py  hotkeys.py  linux_wayland_adapter.py  linux_x11_adapter.py  windows_adapter.py
app/services/: __init__.py  asr_base.py  asr_faster_whisper.py  asr_whisper_cpp.py  audio_engine.py  clipboard.py  commands.py  controller.py  dictionary_store.py  formatter.py  history_store.py  ipc.py  rewrite.py  snippets_store.py
app/ui/: __init__.py  main_window.py  settings_window.py  status_popup.py  tray_app.py
assets/: README.md
docs/: demo-script.md  how-it-works.md  platform-support.md  release-checklist.md  wayland-notes.md
packaging/: README.md  talkpaste-linux.spec  talkpaste-windows.spec
scripts/: build_linux.sh  build_windows.ps1  capture_screenshots.py  make_fixture.py  run_tests.sh
tests/: conftest.py  test_asr_base.py  test_cli.py  test_clipboard.py  test_commands.py  test_config.py  test_controller.py  test_formatter.py  test_hotkeys.py  test_ipc.py  test_platform.py  test_stores.py  test_ui.py
